# NZP-Reboot

./: .gitignore  README.md
maps/: hl-nzp.fgd
maps/ndu/: Ndu.map  Ndu.rmf
maps/wahnsinn/: wahnsinn.map  wahnsinn.rmf
maps/zapper/: zapper.jmx  zapper.map
nx/nzportable/: nzportable.nacp
nx/nzportable/nzp/: config.cfg  progs.lno
pc/: conhistory.txt  default.fmf
pc/game/: csqccore.txt  ssqccore.txt
pc/nzp/: csprogs.lno  csqccore.txt  default.cfg  fte.cfg  iplog.txt  qwprogs.lno  ssqccore.txt
pc/nzp/gfx/: conchars.tga
pc/nzp/maps/: B1ooD.bsp  B1ooD.way  CastleOfDoom.bsp  Cavern.bsp  Example_01.bsp  Facility.bsp  Ndu_ori.bsp  Town.bsp  aitest.bsp  asdasd.bsp  asdasd.max  asdasd.prt  asdasd.srf  demo.bsp  dogs.bsp  dogs.rmf  dr.bsp  facility.way  kino.bsp  mystery.bsp  mystery.rmf  navtest.bsp  ndu.bsp  ndu.lux  pap.bsp  pap.map  pap.p0  pap.p1  pap.p2  pap.p3  perk.bsp  pes.bsp  songtest.bsp  ssdefs.qc  test.bsp  test.rmf  test_buy.bsp  test_lms.bsp  tp.bsp  wahnsinn.bsp  (+5 more)
pc/nzp/menu/: bg.tga
pc/nzp/models/: README.txt  blood.iqm  humanoid_rigged.fbx  humanoid_rigged.iqm  mg_ammo.iqm  (+4 more)
psp/nzportable/: EBOOT.PBP  setup.ini
source/: csprogs.src  linux64-fteqcc  nxprogs.src  progs.src  pspprogs.src  ssprogs.src  vitaprogs.src
source/client/: achievements.qc  customdefs.qc  hud.qc  main.qc  main.qc~  menu.qc
source/engine/: README.md
source/nx/: Makefile.nx
source/psp/: README.txt
source/psp/engine/: CMakeLists.txt  cl_hud.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  cmd.c  host.c  host_cmd.c  menu.c  pr_cmds.c  pr_comp.h  progdefs.h  quakedef.h  snd_dma.c  sv_main.c  sv_user.c  view.c
source/psp/engine/psp/: EBOOT.PBP  Makefile  PARAM.SFO  nzportable.elf  nzportable.prx  video_hardware.cpp  video_hardware.h  video_hardware_QMB.cpp  video_hardware_draw.cpp  video_hardware_main.cpp  video_hardware_mesh.cpp  video_hardware_model.cpp  video_hardware_model.h  video_hardware_screen.cpp
source/server/: clientfuncs.qc  customdefs.qc  damage.qc  dummys.qc  main.qc  nzdparser.qc  pes.qc  player.qc  rounds.qc
source/shared/: customdefs.qc  weapon_defines.qc
source/vita/: Makefile  NZPortable.elf  NZPortable.velf  NZPortable.vpk.tmp  NZPortable.vpk.tmp1  README.txt  TODO.txt
vita/: NZPortable.vpk  log.txt
vita/nzportable/: setup.ini
(+633 files in other folders)
